--- a/docs.html
+++ b/docs.html
@@ -56,7 +56,7 @@
             </a>
           </li>
           <li>
-            <a href="docs.html">
+            <a target="reg" href="https://github.com/hutadev/icon-hutadev">
               GitHub
               <span class="icon">&#8599;</span>
             </a>
@@ -112,7 +112,7 @@
               </a>
             </li>
             <li>
-              <a href="docs.html">
+              <a target="reg" href="https://github.com/hutadev/icon-hutadev">
                 GitHub
                 <span class="icon">&#8599;</span>
               </a>
