--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </a>
           </li>
           <li>
-            <a href="/">
+            <a target="reg" href="https://github.com/hutadev/icon-hutadev">
               GitHub
               <span class="icon">&#8599;</span>
             </a>
@@ -109,7 +109,7 @@
               </a>
             </li>
             <li>
-              <a href="/">
+              <a target="reg" href="https://github.com/hutadev/icon-hutadev">
                 GitHub
                 <span class="icon">&#8599;</span>
               </a>
