--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ícones Huta Dev</title>
     <meta name="author" content="Hutauta Developer (Huta Dev)" />
-    <meta
-      name="description"
-      content="Biblioteca de ícones HTML da Huta Dev, para criar e personalizar conteúdos web de forma rápida e prática." />
+    <meta name="description" content="Biblioteca de ícones HTML da Huta Dev, para criar e personalizar conteúdos web de forma rápida e prática." />
     <meta name="keywords" content="HTML, símbolos, caracteres, biblioteca, web development" />
     <link rel="icon" type="image/webp" href="logo.webp" />
 
@@ -16,9 +14,7 @@
 
     <!-- Meta Open Graph para redes sociais -->
     <meta property="og:title" content="Biblioteca de Símbolos HTML" />
-    <meta
-      property="og:description"
-      content="Biblioteca de ícones HTML da Huta Dev, para criar e personalizar conteúdos web de forma rápida e prática." />
+    <meta property="og:description" content="Biblioteca de ícones HTML da Huta Dev, para criar e personalizar conteúdos web de forma rápida e prática." />
     <meta property="og:image" content="demo.webp" />
     <meta property="og:url" content="http://icon-hutadev.vercel.app/" />
     <meta property="og:type" content="website" />
@@ -26,9 +22,7 @@
     <!-- Meta Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Biblioteca de Símbolos HTML" />
-    <meta
-      name="twitter:description"
-      content="Biblioteca de ícones HTML da Huta Dev, para criar e personalizar conteúdos web de forma rápida e prática." />
+    <meta name="twitter:description" content="Biblioteca de ícones HTML da Huta Dev, para criar e personalizar conteúdos web de forma rápida e prática." />
     <meta name="twitter:image" content="demo.webp" />
     <meta name="twitter:site" content="@HutaDev" />
     <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
@@ -47,7 +41,7 @@
           <li><a class="link-active" href="/">Ícones</a></li>
           <li><a href="docs.html">Docs</a></li>
           <li>
-            <a target="reg" href="https://www.buymeacoffee.com/heliocarlitosantonio">
+            <a target="reg" href="https://www.buymeacoffee.com/hutautadev0">
               Apoiar
               <span class="icon">&#8599;</span>
             </a>
@@ -66,32 +60,14 @@
 
         <label for="check" class="box-icon">
           <div class="icon abrir-menu">
-            <svg
-              stroke="currentColor"
-              fill="none"
-              stroke-width="2"
-              viewBox="0 0 24 24"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              height="1em"
-              width="1em"
-              xmlns="http://www.w3.org/2000/svg">
+            <svg stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
               <path d="M4 8l16 0"></path>
               <path d="M4 16l16 0"></path>
             </svg>
           </div>
 
           <div class="icon fechar-menu">
-            <svg
-              stroke="currentColor"
-              fill="none"
-              stroke-width="2"
-              viewBox="0 0 24 24"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              height="1em"
-              width="1em"
-              xmlns="http://www.w3.org/2000/svg">
+            <svg stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
               <path d="M18 6l-12 12"></path>
               <path d="M6 6l12 12"></path>
             </svg>
@@ -103,7 +79,7 @@
             <li><a class="link-active" href="/">Ícones</a></li>
             <li><a href="docs.html">Docs</a></li>
             <li>
-              <a target="reg" href="https://www.buymeacoffee.com/heliocarlitosantonio">
+              <a target="reg" href="https://www.buymeacoffee.com/hutautadev0">
                 Apoiar
                 <span class="icon">&#8599;</span>
               </a>
@@ -123,24 +99,15 @@
       <div class="version">
         <p>Huta Ícons v1.0</p>
         <div class="icon">
-          <svg
-            stroke="currentColor"
-            fill="currentColor"
-            stroke-width="0"
-            viewBox="0 0 16 16"
-            height="1em"
-            width="1em"
-            xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M7.657 6.247c.11-.33.576-.33.686 0l.645 1.937a2.89 2.89 0 0 0 1.829 1.828l1.936.645c.33.11.33.576 0 .686l-1.937.645a2.89 2.89 0 0 0-1.828 1.829l-.645 1.936a.361.361 0 0 1-.686 0l-.645-1.937a2.89 2.89 0 0 0-1.828-1.828l-1.937-.645a.361.361 0 0 1 0-.686l1.937-.645a2.89 2.89 0 0 0 1.828-1.828zM3.794 1.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387A1.73 1.73 0 0 0 4.593 5.69l-.387 1.162a.217.217 0 0 1-.412 0L3.407 5.69A1.73 1.73 0 0 0 2.31 4.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387A1.73 1.73 0 0 0 3.407 2.31zM10.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.16 1.16 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.16 1.16 0 0 0-.732-.732L9.1 2.137a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732z"></path>
+          <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 16 16" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
+            <path d="M7.657 6.247c.11-.33.576-.33.686 0l.645 1.937a2.89 2.89 0 0 0 1.829 1.828l1.936.645c.33.11.33.576 0 .686l-1.937.645a2.89 2.89 0 0 0-1.828 1.829l-.645 1.936a.361.361 0 0 1-.686 0l-.645-1.937a2.89 2.89 0 0 0-1.828-1.828l-1.937-.645a.361.361 0 0 1 0-.686l1.937-.645a2.89 2.89 0 0 0 1.828-1.828zM3.794 1.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387A1.73 1.73 0 0 0 4.593 5.69l-.387 1.162a.217.217 0 0 1-.412 0L3.407 5.69A1.73 1.73 0 0 0 2.31 4.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387A1.73 1.73 0 0 0 3.407 2.31zM10.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.16 1.16 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.16 1.16 0 0 0-.732-.732L9.1 2.137a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732z"></path>
           </svg>
         </div>
       </div>
 
       <h1>Biblioteca de Ícones HTML</h1>
       <p class="subtitle">
-        Explore e copie códigos do ícon para usar em seus projetos. Não são svg, mas sim entidade numérica, o que
-        garante carregamento rápido.
+        Explore e copie códigos do ícon para usar em seus projetos. Não são svg, mas sim entidade numérica, o que garante carregamento rápido.
         <span>
           <span id="TotalDeIcones"></span>
           + ícones disponíveis.
@@ -148,16 +115,8 @@
       </p>
       <div class="search-container">
         <div class="icon">
-          <svg
-            stroke="currentColor"
-            fill="currentColor"
-            stroke-width="0"
-            viewBox="0 0 512 512"
-            height="1em"
-            width="1em"
-            xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"></path>
+          <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
+            <path d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"></path>
           </svg>
         </div>
         <input type="text" id="search" placeholder="Pesquisar ícon..." />
