--- a/docs.html
+++ b/docs.html
@@ -42,7 +42,7 @@
           <li><a href="/">Ícones</a></li>
           <li><a class="link-active" href="docs.html">Docs</a></li>
           <li>
-            <a target="reg" href="https://www.buymeacoffee.com/hutautadev0">
+            <a target="reg" href="https://www.buymeacoffee.com/hutautadev">
               Apoiar
               <span class="icon">&#8599;</span>
             </a>
@@ -80,7 +80,7 @@
             <li><a href="/">Ícones</a></li>
             <li><a class="link-active" href="docs.html">Docs</a></li>
             <li>
-              <a target="reg" href="https://www.buymeacoffee.com/hutautadev0">
+              <a target="reg" href="https://www.buymeacoffee.com/hutautadev">
                 Apoiar
                 <span class="icon">&#8599;</span>
               </a>
