--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <li><a class="link-active" href="/">Ícones</a></li>
           <li><a href="docs.html">Docs</a></li>
           <li>
-            <a target="reg" href="https://www.buymeacoffee.com/hutautadev0">
+            <a target="reg" href="https://www.buymeacoffee.com/hutautadev">
               Apoiar
               <span class="icon">&#8599;</span>
             </a>
@@ -79,7 +79,7 @@
             <li><a class="link-active" href="/">Ícones</a></li>
             <li><a href="docs.html">Docs</a></li>
             <li>
-              <a target="reg" href="https://www.buymeacoffee.com/hutautadev0">
+              <a target="reg" href="https://www.buymeacoffee.com/hutautadev">
                 Apoiar
                 <span class="icon">&#8599;</span>
               </a>
